--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+5-28 [25年后，为何BBC再次调查戴妃采访造假事件？](/articles/ft/1045554.md)
+
+5-28 [盖茨基金会考虑改革管理制度](/articles/ft/1045555.md)
+
 5-28 [维也纳的乐声、圣矛和纽伦堡的名歌手](/articles/ft/1045556.md)
 
 5-28 [美国人口变化会有利于共和党吗？](/articles/ft/1045557.md)
@@ -596,8 +600,4 @@
 3-25 [每周时事分析：中欧关系正在十字路口微妙着](/articles/ft/1045852.md)
 
 3-25 [腾讯证实与中国反垄断监管机构开会](/articles/ft/1045853.md)
-
-3-25 [字节跳动加码进军游戏领域](/articles/ft/1045854.md)
-
-3-25 [2021年美元反转及其影响](/articles/ft/1045855.md)
 
