--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-28 [黎智英等香港民主派人士因参与未经批准集结被判监14到18个月](/articles/voa/1040498.md)
+
 5-28 [联合国人权专员：以色列对加沙的袭击可能是战争罪](/articles/voa/1040499.md)
 
 5-28 [美联社：拜登预计将宣布驻华与驻印大使人选](/articles/voa/1040500.md)
@@ -598,6 +600,4 @@
 5-15 [中国加强与中亚联系 俄媒激烈抨击北京干涉内政](/articles/voa/1040796.md)
 
 5-15 [美国再次表示，要与澳大利亚站在一起，对抗中国胁迫](/articles/voa/1040797.md)
-
-5-15 [杜特尔特再度杠上中国突出不会从有争议水域撤出菲律宾船只](/articles/voa/1040798.md)
 
