--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-28 [北青深一度 | 越野赛道上，跑向生命终点的他们](/articles/cdt/382095.md)
+
+5-28 [BBC | 香港民阵会否消失？召集人陈皓桓谈“年轻一代孤单不安的民主路”](/articles/cdt/382096.md)
+
+5-28 [BBC | 黎智英等香港民主派人士前年国庆示威案被判监14至18个月](/articles/cdt/382097.md)
+
 5-28 [【旧闻重温】孙立平：极权主义是一种人类历史上从未有过的新的统治形态](/articles/cdt/382104.md)
 
 5-27 [【立此存照】全国至少已有12人因“侮辱袁隆平”被警方处罚](/articles/cdt/382135.md)
@@ -594,10 +600,4 @@
 4-22 [封面新闻｜“女子5年4次起诉离婚被驳回案”第5次开庭延期 宁顺花：很失落](/articles/cdt/383411.md)
 
 4-22 [【CDTV】波特王 | 被說收錢？是政府打手？！遭到五毛自媒體圍攻｜四月的粉紅月報-上集](/articles/cdt/383414.md)
-
-4-22 [【CDTV】波特王 | 大搞批鬥？粉紅專打自己人？到底怎樣才能不辱華？｜三月粉紅月報-下集](/articles/cdt/383415.md)
-
-4-22 [Just Fist It | 大型女权猎巫行动中的三位性别恐怖分子，到底是什么人？](/articles/cdt/383416.md)
-
-4-21 [【CDTV】王岐山｜ “我只是临时主持人，我为习近平报幕”](/articles/cdt/383418.md)
 
