--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-28 [新周刊 | 不内卷，不躺平，这届年轻人还能怎么办](/articles/cdt/382093.md)
+
 5-28 [北青深一度 | 越野赛道上，跑向生命终点的他们](/articles/cdt/382095.md)
 
 5-28 [BBC | 香港民阵会否消失？召集人陈皓桓谈“年轻一代孤单不安的民主路”](/articles/cdt/382096.md)
@@ -598,6 +600,4 @@
 4-22 [【立此存照】环球网｜最新民调：过半中国青年“西方观”因疫情改变](/articles/cdt/383409.md)
 
 4-22 [封面新闻｜“女子5年4次起诉离婚被驳回案”第5次开庭延期 宁顺花：很失落](/articles/cdt/383411.md)
-
-4-22 [【CDTV】波特王 | 被說收錢？是政府打手？！遭到五毛自媒體圍攻｜四月的粉紅月報-上集](/articles/cdt/383414.md)
 
