--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+5-28 [纳米比亚肯定德国  坦承曾犯种族灭绝罪行 – 法国国际广播电台 - RFI](/articles/rfi/1029029.md)
+
 5-28 [黎智英等人承认非法集结 判囚14到18个月 – 法国国际广播电台 - RFI](/articles/rfi/1029030.md)
 
 5-28 [日欧首脑联合声明提及台湾海峡与东海安全 北京抗议](/articles/rfi/1029031.md)
@@ -598,6 +600,4 @@
 5-24 [立陶宛退出17+1合作机制 中国欧盟关系恶化最新迹象 – 法国国际广播电台 - RFI](/articles/rfi/1029327.md)
 
 5-24 [衣索比亚未积极结束泰格瑞省内乱 美祭签证限制 – 法国国际广播电台 - RFI](/articles/rfi/1029328.md)
-
-5-24 [奥运将至 日本2处大规模疫苗中心开打 – 法国国际广播电台 - RFI](/articles/rfi/1029329.md)
 
