--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-28 [【立此存照】共青团微博号召年轻人不要“躺平” 反被呛“涨资产阶级士气、灭无产阶级威风”](/articles/cdt/382089.md)
+
 5-28 [Alfred | 港人流亡日记：内疚及恐惧（及近况更新）](/articles/cdt/382090.md)
 
 5-28 [新周刊 | 不内卷，不躺平，这届年轻人还能怎么办](/articles/cdt/382093.md)
@@ -598,6 +600,4 @@
 4-22 [3号厅检票员工｜这事我们早该反思了](/articles/cdt/383403.md)
 
 4-22 [美国之音｜“习近平家人信息泄露案” 二审即将宣判 牛腾宇母亲呼唤公平正义](/articles/cdt/383407.md)
-
-4-22 [【立此存照】环球网｜最新民调：过半中国青年“西方观”因疫情改变](/articles/cdt/383409.md)
 
