--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+5-29 [台湾作家纪大伟短篇小说集《珍珠》参加FICEP文学之夜](/articles/rfi/1029002.md)
+
 5-29 [就冲击国会大厦事件成立调查委员会的法案被封杀在美国参议院门前](/articles/rfi/1029003.md)
 
 5-29 [大赦国际成立60周年：&quot;人权受到的挑战比1961年多得多&quot;](/articles/rfi/1029004.md)
@@ -598,6 +600,4 @@
 5-24 [佛洛伊德遇害周年前夕 家属和支持者大游行 – 法国国际广播电台 - RFI](/articles/rfi/1029300.md)
 
 5-24 [比特币再下跌 政府打击后中国挖矿机运营商暂停国内挖矿业务 - 今日经济](/articles/rfi/1029301.md)
-
-5-24 [休达偷渡危机及其北非地缘政治背景 - 聚焦非洲](/articles/rfi/1029302.md)
 
