--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-29 [缅甸军事法庭判处纵火焚烧中资工厂的28人长期监禁和苦役](/articles/voa/1040481.md)
+
 5-29 [拜登向国会提交国防预算案 增加威慑中国的开支 并为军人加薪2.7%](/articles/voa/1040482.md)
 
 5-29 [实验室泄露说升温 科学家：我们需要看到这些证据](/articles/voa/1040483.md)
@@ -598,6 +600,4 @@
 5-15 [台陆委会：以国安法冻结私人资产加大香港商业风险](/articles/voa/1040779.md)
 
 5-15 [巴以冲突持续六天，目前尚无停战迹象](/articles/voa/1040780.md)
-
-5-15 [解放军频频军演恫吓台湾 未来作战手法或大幅改变](/articles/voa/1040781.md)
 
