--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-29 [美国人在阵亡将士纪念日周末增加出行](/articles/voa/1040478.md)
+
+5-29 [台湾驻美代表萧美琴在美台高层会谈中表达对新冠疫苗急迫需求](/articles/voa/1040479.md)
+
+5-29 [美参院两党分歧难弥 大型抗中法案延至六月表决](/articles/voa/1040480.md)
+
 5-29 [缅甸军事法庭判处纵火焚烧中资工厂的28人长期监禁和苦役](/articles/voa/1040481.md)
 
 5-29 [拜登向国会提交国防预算案 增加威慑中国的开支 并为军人加薪2.7%](/articles/voa/1040482.md)
@@ -594,10 +600,4 @@
 5-16 [缅甸政府军与地方反政府武装爆发战斗](/articles/voa/1040776.md)
 
 5-16 [香港保安局首引国安法冻结黎智英资产 学者指或影响投资者信心](/articles/voa/1040777.md)
-
-5-16 [私校姓党从娃娃抓起，中共开始强化对私校民办教育控制](/articles/voa/1040778.md)
-
-5-15 [台陆委会：以国安法冻结私人资产加大香港商业风险](/articles/voa/1040779.md)
-
-5-15 [巴以冲突持续六天，目前尚无停战迹象](/articles/voa/1040780.md)
 
