--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-29 [苏晓康 | 维园烛光](/articles/cdt/382065.md)
+
+5-29 [山河路人 | 中国写歌最多的奇才，要你为祖国生二胎](/articles/cdt/382066.md)
+
 5-29 [东亚评论｜东亚的年轻人，都不生了……](/articles/cdt/382068.md)
 
 5-28 [品葱｜躺平主义和加速主义，哪个对当今社会冲击更大？](/articles/cdt/382076.md)
@@ -596,8 +600,4 @@
 4-23 [立场新闻 | Selfless、Fearless — 蔡玉玲的最后信仰](/articles/cdt/383382.md)
 
 4-23 [端传媒 | 犯人栏里的记者蔡玉玲：每个人都可能被推上这个位置（节选）](/articles/cdt/383383.md)
-
-4-24 [【中国哭墙】所有缝隙都是光照进来的地方（4月19-24日，2021年）](/articles/cdt/383388.md)
-
-4-23 [【立此存照】付国豪离开环球时报的“真正原因”：入不敷出、患抑郁症](/articles/cdt/383397.md)
 
