--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-29 [中国改变世界格局 德国坚信双赢局面](/articles/dw/1042224.md)
+
 5-29 [再度连任 阿萨德继续执掌叙利亚](/articles/dw/1042225.md)
 
 5-28 [欧日声明首提台湾 中方表示强烈不满](/articles/dw/1042226.md)
@@ -598,6 +600,4 @@
 5-12 [不愿生娃怎么办？北大教授出奇招](/articles/dw/1042522.md)
 
 5-12 [中东暴力升级 以巴冲突扩大](/articles/dw/1042523.md)
-
-5-12 [博伊斯诞辰百年：“人人都是艺术家“](/articles/dw/1042524.md)
 
