--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-29 [香港“六四”烛光纪念活动组织者上诉失败](/articles/voa/1040474.md)
+
+5-29 [菲律宾抗议中国在南中国海的“非法”存在](/articles/voa/1040475.md)
+
+5-29 [布林肯：美国和印度联手抗疫](/articles/voa/1040476.md)
+
 5-29 [承诺多兑现少，中东欧国家对中国不买账](/articles/voa/1040477.md)
 
 5-29 [美国人在阵亡将士纪念日周末增加出行](/articles/voa/1040478.md)
@@ -594,10 +600,4 @@
 5-16 [日美法军演着眼中国](/articles/voa/1040772.md)
 
 5-16 [拜登与以巴双方领导人通话，对地区冲突表示关切](/articles/voa/1040773.md)
-
-5-16 [欧洲发生支持巴勒斯坦人游行](/articles/voa/1040774.md)
-
-5-16 [欧晓瑜：由纽约移民家庭的孩子成长为佐治亚州参议员](/articles/voa/1040775.md)
-
-5-16 [缅甸政府军与地方反政府武装爆发战斗](/articles/voa/1040776.md)
 
