--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-29 [“劫持”客机事件：美国宣布恢复制裁白俄罗斯](/articles/dw/1042217.md)
+
 5-29 [德排外政党盯上香港政治难民](/articles/dw/1042218.md)
 
 5-29 [老友记重聚特辑：哪些画面在中国被删？](/articles/dw/1042219.md)
@@ -598,6 +600,4 @@
 5-12 [台湾社区感染病例激增 防疫优等生会否“破功”？](/articles/dw/1042515.md)
 
 5-12 [国会否决“健康通行证” 马克龙解禁计划受阻](/articles/dw/1042516.md)
-
-5-12 [北京要给瑞典“最后一次机会”？](/articles/dw/1042517.md)
 
