--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-29 [轰-20呼之欲出？中国兵器杂志刊登想象图引热议](/articles/voa/1040472.md)
+
 5-29 [新闻自由组织呼吁联合国为黎智英获释采取行动](/articles/voa/1040473.md)
 
 5-29 [香港“六四”烛光纪念活动组织者上诉失败](/articles/voa/1040474.md)
@@ -598,6 +600,4 @@
 5-16 [美英谴责缅甸军政府暴力 教宗呼吁民众不要屈服于邪恶和分裂](/articles/voa/1040770.md)
 
 5-16 [印度敦促中国稳定新冠肺炎药物成分的价格](/articles/voa/1040771.md)
-
-5-16 [日美法军演着眼中国](/articles/voa/1040772.md)
 
