--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+5-29 [美国议员提议美军特种兵可训练台湾军人](/articles/rfi/1028948.md)
+
+5-29 [印度支持美国 进一步调查新冠肺炎病毒起源](/articles/rfi/1028949.md)
+
+5-29 [全球疫情确诊逾1亿6937万例 超过352万人病殁 – 法国国际广播电台 - RFI](/articles/rfi/1028950.md)
+
+5-29 [中国-美国：数码霸权之争 - 特别节目](/articles/rfi/1028951.md)
+
+5-29 [中国专家认为：拜登要求新冠病毒溯源调查实际上是遏制中国另一个有力手段](/articles/rfi/1028952.md)
+
 5-29 [《朋友：重逢》在中国遭截砍 因明星曾对中国批评不敬 粉丝说愤怒](/articles/rfi/1028953.md)
 
 5-29 [网络致敬袁隆平 - 微言微语](/articles/rfi/1028954.md)
@@ -590,14 +600,4 @@
 5-25 [白俄罗斯逼客机迫降逮人 多家航空公司避开领空 – 法国国际广播电台 - RFI](/articles/rfi/1029246.md)
 
 5-25 [美股收红助攻 日股连4涨 – 法国国际广播电台 - RFI](/articles/rfi/1029247.md)
-
-5-25 [澳洲维多利亚州爆疫情 纽国暂停旅游泡泡 – 法国国际广播电台 - RFI](/articles/rfi/1029248.md)
-
-5-25 [白俄反对派吁  欧美升高对执政当局施压 – 法国国际广播电台 - RFI](/articles/rfi/1029249.md)
-
-5-25 [港企被控强迫中国工人在塞班岛超限工作 法官下令赔偿540万美元](/articles/rfi/1029250.md)
-
-5-25 [美国政府由于疫情警告国民“暂勿前往日本”](/articles/rfi/1029251.md)
-
-5-25 [「回港易」今起按大陆疫情风险评估推行](/articles/rfi/1029252.md)
 
