--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-29 [中国一些地方政府要求员工不要拥有特斯拉汽车](/articles/voa/1040470.md)
+
 5-29 [美国会议员提法案 拟将“台北驻美代表处”更名为“台湾驻美代表处”](/articles/voa/1040471.md)
 
 5-29 [轰-20呼之欲出？中国兵器杂志刊登想象图引热议](/articles/voa/1040472.md)
@@ -598,6 +600,4 @@
 5-17 [媒体要求以色列对摧毁新闻机构办公楼做出解释](/articles/voa/1040768.md)
 
 5-16 [印度恒河河岸发现大量尸体 官方否认与新冠病毒有关](/articles/voa/1040769.md)
-
-5-16 [美英谴责缅甸军政府暴力 教宗呼吁民众不要屈服于邪恶和分裂](/articles/voa/1040770.md)
 
