--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-30 [阿富汗炸弹攻击造成3人死亡，15人受伤](/articles/voa/1040468.md)
+
 5-30 [美国决定不重返《开放天空条约》](/articles/voa/1040469.md)
 
 5-29 [中国一些地方政府要求员工不要拥有特斯拉汽车](/articles/voa/1040470.md)
@@ -598,6 +600,4 @@
 5-17 [内塔尼亚胡：以色列空袭加沙不会“立即”结束](/articles/voa/1040766.md)
 
 5-17 [俄共被批已成中共党支部 俄政党攻讦开打中国牌](/articles/voa/1040767.md)
-
-5-17 [媒体要求以色列对摧毁新闻机构办公楼做出解释](/articles/voa/1040768.md)
 
