--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 5-30 [【新闻连连看】北京对牌匾标识千店一面说不](/articles/cdt/382048.md)
 
+5-30 [多数事务社｜社会：Privilege事件 与高傲一起尽数体现的还有无知与冷漠](/articles/cdt/382051.md)
+
 5-30 [【旧闻重温】地铁上的安全员](/articles/cdt/382056.md)
 
 5-29 [Matters | 陈纯：中国国家主义的分裂](/articles/cdt/382058.md)
@@ -598,6 +600,4 @@
 4-24 [【立此存照】美军翘脚观辽宁舰恰展示出“人民海军对军力的自信”](/articles/cdt/383370.md)
 
 4-23 [德国之声｜长平观察：中国女权，“习大大”的奥秘](/articles/cdt/383372.md)
-
-4-23 [【CDTV】波特王 | 墙内文革2.0开始？连兔子也能被辱华（四月的粉红月报 下集）](/articles/cdt/383374.md)
 
