--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -7,6 +7,8 @@
 
 5-30 [多数事务社｜社会：Privilege事件 与高傲一起尽数体现的还有无知与冷漠](/articles/cdt/382051.md)
 
+5-30 [念念回声 | 女人拿性讲脱口秀，光宗耀祖，写进族谱](/articles/cdt/382053.md)
+
 5-30 [【旧闻重温】地铁上的安全员](/articles/cdt/382056.md)
 
 5-29 [Matters | 陈纯：中国国家主义的分裂](/articles/cdt/382058.md)
@@ -598,6 +600,4 @@
 4-24 [【麻辣总局】“Whataboutism 你也一样”主义 动物庄园动画剧场](/articles/cdt/383364.md)
 
 4-24 [【立此存照】美军翘脚观辽宁舰恰展示出“人民海军对军力的自信”](/articles/cdt/383370.md)
-
-4-23 [德国之声｜长平观察：中国女权，“习大大”的奥秘](/articles/cdt/383372.md)
 
