--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -41,6 +41,10 @@
 
 5-28 [BBC | 黎智英等香港民主派人士前年国庆示威案被判监14至18个月](/articles/cdt/382097.md)
 
+5-30 [【CDT敏感词周报】第二十六期：三年饥荒、躺平学](/articles/cdt/382099.md)
+
+5-30 [【CDT周报】第十九期：世上不乏极限马拉松，但以死亡率而言，甘肃的马拉松最危险](/articles/cdt/382100.md)
+
 5-28 [【旧闻重温】孙立平：极权主义是一种人类历史上从未有过的新的统治形态](/articles/cdt/382104.md)
 
 5-27 [【立此存照】全国至少已有12人因“侮辱袁隆平”被警方处罚](/articles/cdt/382135.md)
@@ -596,8 +600,4 @@
 4-24 [【图说天朝】网友爆料：护照过期，工作人员百般刁难不予办理](/articles/cdt/383355.md)
 
 4-24 [【网络民议】全民吐槽五一调休：祝搞出小长假的人小长寿](/articles/cdt/383361.md)
-
-4-24 [【麻辣总局】“Whataboutism 你也一样”主义 动物庄园动画剧场](/articles/cdt/383364.md)
-
-4-24 [【立此存照】美军翘脚观辽宁舰恰展示出“人民海军对军力的自信”](/articles/cdt/383370.md)
 
