--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-30 [《老友记》重聚特辑在中国被审查，客串歌手因言糟剪](/articles/voa/1040463.md)
+
 5-30 [拜登将会普京 美国能否将俄罗斯从中国身边剥离？](/articles/voa/1040464.md)
 
 5-30 [越南发现新冠病毒混合新变体](/articles/voa/1040465.md)
@@ -598,6 +600,4 @@
 5-17 [拜登称为维吾尔族和所有人的宗教自由发声](/articles/voa/1040761.md)
 
 5-17 [农民饱受全球气候暖化冲击期盼变革](/articles/voa/1040762.md)
-
-5-17 [美国疾控中心主任对抗击新冠病毒持“谨慎乐观”态度](/articles/voa/1040763.md)
 
