--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-30 [干货 | 怎样靠战狼爽文洗脑诈骗40亿？](/articles/cdt/382040.md)
+
 5-30 [【新闻连连看】北京对牌匾标识千店一面说不](/articles/cdt/382048.md)
 
 5-30 [多数事务社｜社会：Privilege事件 与高傲一起尽数体现的还有无知与冷漠](/articles/cdt/382051.md)
@@ -598,6 +600,4 @@
 4-24 [【异闻观止】苹果日报 | 价值八万的半亿工程](/articles/cdt/383351.md)
 
 4-24 [【图说天朝】网友爆料：护照过期，工作人员百般刁难不予办理](/articles/cdt/383355.md)
-
-4-24 [【网络民议】全民吐槽五一调休：祝搞出小长假的人小长寿](/articles/cdt/383361.md)
 
