--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-30 [中国智库：中国可以在关税豁免上找到共同点](/articles/voa/1040461.md)
+
 5-30 [广州本土疫情导致部分居民区限制出行](/articles/voa/1040462.md)
 
 5-30 [《老友记》重聚特辑在中国被审查，客串歌手因言糟剪](/articles/voa/1040463.md)
@@ -598,6 +600,4 @@
 5-17 [巴以暴力冲突进入第二周 中国外长指责美国包庇以色列](/articles/voa/1040759.md)
 
 5-17 [化腐朽为创意的艺术机器人](/articles/voa/1040760.md)
-
-5-17 [拜登称为维吾尔族和所有人的宗教自由发声](/articles/voa/1040761.md)
 
