--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-30 [越南发现传染力更强的“混种病毒”](/articles/dw/1042199.md)
+
 5-30 [中国天舟二号与新空间站交会对接](/articles/dw/1042200.md)
 
 5-30 [约翰逊秘密结婚 首相办公室证实婚讯](/articles/dw/1042201.md)
@@ -598,6 +600,4 @@
 5-13 [环保为先？特斯拉暂停接受比特币支付](/articles/dw/1042497.md)
 
 5-13 [媒体热衷聊孙杨 霍顿建议“换话题”](/articles/dw/1042498.md)
-
-5-13 [德国入境检疫新规：已接种疫苗者无需隔离](/articles/dw/1042499.md)
 
