--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-31 [六四纪念馆新展览连结八九民运与香港 设小场区供市民献花悼念](/articles/voa/1040455.md)
+
 5-31 [以色列总理内塔尼亚胡面临着日益增长的让其下台的威胁](/articles/voa/1040456.md)
 
 5-31 [佛罗里达一娱乐厅外突爆枪击案，至少2死20伤，凶嫌在逃](/articles/voa/1040457.md)
@@ -598,6 +600,4 @@
 5-17 [中国4月零售额和工业增加值增速回落引发对经济复苏前景的担忧](/articles/voa/1040753.md)
 
 5-17 [“大学”消失 “湖畔”还能留多久？](/articles/voa/1040754.md)
-
-5-17 [梵蒂冈宣布委任周守仁神父担任香港天主教教区新主教](/articles/voa/1040755.md)
 
