--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+5-31 [英媒：英国情报机关评估认为武毒所外泄论是“可能的”](/articles/rfi/1028893.md)
+
+5-31 [港澳风声鹤唳 但今年全球对六四关注度或许更大 - 要闻分析](/articles/rfi/1028894.md)
+
 5-31 [加拿大原住民儿童寄宿学校震惊世人](/articles/rfi/1028895.md)
 
 5-30 [Covid-19病毒正在泰国监狱里扩散](/articles/rfi/1028896.md)
@@ -596,8 +600,4 @@
 5-26 [东京奥运官方合作伙伴朝日新闻 呼吁停办东奥 – 法国国际广播电台 - RFI](/articles/rfi/1029191.md)
 
 5-26 [一球迷观赛后确诊 澳洲数千人得自我隔离和采检 – 法国国际广播电台 - RFI](/articles/rfi/1029192.md)
-
-5-26 [远离川普中东政策 布林肯矢言重建巴勒斯坦关系 – 法国国际广播电台 - RFI](/articles/rfi/1029193.md)
-
-5-26 [加拿大总理痛斥劫机逮人行径粗暴 白俄罗斯下令关使馆 – 法国国际广播电台 - RFI](/articles/rfi/1029194.md)
 
