--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-31 [“我们以前用太多水了”：台湾干旱节水成新常态](/articles/nyt/1046803.md)
+
 5-28 [科学界支持进一步调查新冠起源](/articles/nyt/1046804.md)
 
 5-28 [从抗议者到阶下囚：十名香港活动人士被判刑](/articles/nyt/1046805.md)
@@ -598,6 +600,4 @@
 3-12 [中国人为什么迷恋伊隆·马斯克？](/articles/nyt/1047101.md)
 
 3-12 [3·11大地震十周年：一个被抹去的村庄](/articles/nyt/1047102.md)
-
-3-8 [微软遭入侵凸显拜登政府的中俄黑客难题](/articles/nyt/1047103.md)
 
