--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+5-31 [中美竞争：如何跳出修昔底德陷阱](/articles/ft/1045550.md)
+
 5-31 [一周世界舆论聚焦：打破中欧关系僵局，主动权在中国手里](/articles/ft/1045551.md)
 
 5-31 [全球化破碎，从云计算开始](/articles/ft/1045552.md)
@@ -598,6 +600,4 @@
 3-25 [中国科技股因监管担忧大幅下跌](/articles/ft/1045848.md)
 
 3-25 [中国股市由领跑者变为落后者](/articles/ft/1045849.md)
-
-3-25 [朝鲜几天内进行两次武器试验](/articles/ft/1045850.md)
 
