--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+5-31 [中国将实施“三孩”生育政策](/articles/nyt/1046797.md)
+
+5-31 [编辑部内部“起火”，美国主流媒体的变革时代](/articles/nyt/1046798.md)
+
 5-31 [为什么不该忽视新冠病毒“实验室泄漏说”](/articles/nyt/1046799.md)
 
 5-31 [美国专家呼吁中国提高新冠起源调查透明度](/articles/nyt/1046800.md)
@@ -596,8 +600,4 @@
 3-15 [拜登亚洲外交策略：重建盟友关系，联手对抗中国](/articles/nyt/1047095.md)
 
 3-15 [“西天懂佛特朗普”雕塑：中国对特朗普的文化痴迷](/articles/nyt/1047096.md)
-
-3-15 [台湾，疫情中的“世外桃源”](/articles/nyt/1047097.md)
-
-3-15 [简报：疫情中的“世外桃源”台湾；领英暂停中国新用户注册](/articles/nyt/1047098.md)
 
