--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-31 [广东省现印度丶英国病毒株  广州半封城](/articles/dw/1042194.md)
+
 5-31 [台湾购千万「二期」国产疫苗  在野党质疑安全性](/articles/dw/1042195.md)
 
 5-31 [香港六四纪念馆重开  李卓人：狱中「以烟代烛」悼念](/articles/dw/1042196.md)
@@ -598,6 +600,4 @@
 5-13 [美输油管网遭袭后 出现部分供应紧张](/articles/dw/1042492.md)
 
 5-13 [高雄电厂出事故 台湾846万户轮流停电](/articles/dw/1042493.md)
-
-5-13 [美國總統拜登：「以色列有權自我防禦」](/articles/dw/1042494.md)
 
