--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-31 [政治局拍板落实三孩政策、延迟退休年龄](/articles/rfa/1045458.md)
+
 5-31 [旧金山民运人士清洗民主女神像  为六四纪念活动做准备](/articles/rfa/1045459.md)
 
 5-29 [美制裁中国一远洋捕鱼企业  因强迫劳动](/articles/rfa/1045460.md)
@@ -598,6 +600,4 @@
 4-27 [曾替12港人案辩护   律师杨晖涉转卖旧书罚款近三十万](/articles/rfa/1045756.md)
 
 4-27 [熟蛋返生反智惹群嘲 “谎”蛋映照出中国诈骗产业链](/articles/rfa/1045757.md)
-
-4-27 [国产电视机安卓系统无孔不入   暗藏搜集信息功能涵盖邻居](/articles/rfa/1045758.md)
 
