--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+5-31 [《一直游到海水变蓝》：作家视角里的中国](/articles/nyt/1046795.md)
+
+5-31 [永盛监狱：缅甸军方关押政治犯的“人间地狱”](/articles/nyt/1046796.md)
+
 5-31 [中国将实施“三孩”生育政策](/articles/nyt/1046797.md)
 
 5-31 [编辑部内部“起火”，美国主流媒体的变革时代](/articles/nyt/1046798.md)
@@ -596,8 +600,4 @@
 3-15 [“古拉格的孩子”：生于大清洗，流亡70年](/articles/nyt/1047093.md)
 
 3-15 [赛百味，韩剧植入广告之王](/articles/nyt/1047094.md)
-
-3-15 [拜登亚洲外交策略：重建盟友关系，联手对抗中国](/articles/nyt/1047095.md)
-
-3-15 [“西天懂佛特朗普”雕塑：中国对特朗普的文化痴迷](/articles/nyt/1047096.md)
 
