--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+5-31 [雀巢内部文件承认其产品大部分不健康](/articles/ft/1045546.md)
+
 5-31 [房地产：“七普”数据揭示什么趋势](/articles/ft/1045547.md)
 
 5-31 [艰难清零，又人为制造新防疫漏洞？——三问香港特区政府](/articles/ft/1045548.md)
@@ -598,6 +600,4 @@
 3-26 [印度暂停疫苗出口 影响数十国家](/articles/ft/1045844.md)
 
 3-26 [迪拜艺术博览会顽强走向线下](/articles/ft/1045845.md)
-
-3-26 [新冠“三棱镜”：疫苗技术、疫苗经济与疫苗政治](/articles/ft/1045846.md)
 
