--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+5-31 [【图说天朝】三孩生育政策来了，微信朋友圈已成段子海洋](/articles/cdt/381987.md)
+
+5-31 [骚客文艺｜不会吧，白岩松老师](/articles/cdt/381988.md)
+
 5-31 [【网络民议】月中“人口增长态势”继续保持 月末三孩生“肓”政策来了？](/articles/cdt/382003.md)
 
 5-31 [中产生活观察｜何伟离开中国：一种结束](/articles/cdt/382005.md)
@@ -596,8 +600,4 @@
 4-25 [后生价值 | 成为「悲伤同志」](/articles/cdt/383321.md)
 
 4-24 [Matters | 港人流亡日记：乡愁就是不能再一往如常](/articles/cdt/383324.md)
-
-4-24 [忽悠 | 福岛核废水事件的一些碎碎念](/articles/cdt/383337.md)
-
-4-25 [【CDT敏感词周报】第二十一期：温家宝、博鳌报幕、牛腾宇](/articles/cdt/383339.md)
 
