--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-31 [专访历史学者周杰荣谈六四屠杀新研究 (2)](/articles/voa/1040446.md)
+
 5-31 [为时已晚？中国宣布允许一家生三胎](/articles/voa/1040447.md)
 
 5-31 [天安门母亲祭文：岁月流逝但我们的信念与坚守永不改变](/articles/voa/1040448.md)
@@ -598,6 +600,4 @@
 5-18 [10名香港民主派骨干承认前年10-1未经批准集结 押后5月28日判刑](/articles/voa/1040744.md)
 
 5-18 [时事大家谈: 文革55周年：毛为何发动？习为何重评?](/articles/voa/1040745.md)
-
-5-18 [专家称：美国将更频繁使用无人机监视中国 中国也在积极发展自杀式无人机](/articles/voa/1040746.md)
 
