--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-31 [中国与台湾再就疫苗议题对呛，互批“政治操作”](/articles/voa/1040445.md)
+
 5-31 [专访历史学者周杰荣谈六四屠杀新研究 (2)](/articles/voa/1040446.md)
 
 5-31 [为时已晚？中国宣布允许一家生三胎](/articles/voa/1040447.md)
@@ -598,6 +600,4 @@
 5-18 [中国延长对79种美国商品的关税豁免](/articles/voa/1040743.md)
 
 5-18 [10名香港民主派骨干承认前年10-1未经批准集结 押后5月28日判刑](/articles/voa/1040744.md)
-
-5-18 [时事大家谈: 文革55周年：毛为何发动？习为何重评?](/articles/voa/1040745.md)
 
