--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-31 [异议人士王爱忠遭刑事拘留 跟言论和接受外媒访问有关](/articles/rfa/1045454.md)
+
 5-31 [疫苗外交争霸战 美国能后来居上？](/articles/rfa/1045455.md)
 
 5-31 [台湾疫苗政策遭挑战 蔡政府面临舆论压力锅 呼吁冷静团结](/articles/rfa/1045456.md)
@@ -598,6 +600,4 @@
 4-28 [西藏人权报告：中共压制西藏达“危害人类罪”水平](/articles/rfa/1045752.md)
 
 4-27 [专访陈维明：“奥斯卡中国自由人权奖”的历史与本届特点](/articles/rfa/1045753.md)
-
-4-27 [中国公开三大主要新战舰 战略自信还是吓阻他国？](/articles/rfa/1045754.md)
 
