--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -9,7 +9,7 @@
 
 5-31 [骚客文艺｜不会吧，白岩松老师](/articles/cdt/381988.md)
 
-5-31 [【网络民议】月中“人口增长态势”继续保持 月末三孩生“肓”政策来了？](/articles/cdt/382003.md)
+5-31 [【网络民议】我不买三辆劳斯莱斯是因为劳斯莱斯限购吗？](/articles/cdt/382003.md)
 
 5-31 [中产生活观察｜何伟离开中国：一种结束](/articles/cdt/382005.md)
 
