--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-1 [德克萨斯州长誓言继续努力通过限制投票新规](/articles/voa/1040435.md)
+
+6-1 [拜登阵亡将士纪念日发表讲话 警告民主在美国和世界都受到威胁](/articles/voa/1040436.md)
+
 6-1 [时事大家谈: 拜登重查毒源响应者众，北京反咬美国孤掌难鸣？](/articles/voa/1040437.md)
 
 6-1 [香港民主派47人案押后7月8日再讯 辩方要求控方交待案情严重性](/articles/voa/1040438.md)
@@ -596,8 +600,4 @@
 5-18 [夕阳老年人话“人普” 只关心过好“剩下的日子”](/articles/voa/1040733.md)
 
 5-18 [布林肯正访问冰岛 将与俄外长举行首次面对面会晤](/articles/voa/1040734.md)
-
-5-18 [香港突然宣布驻台办事处停运 台港关系更趋恶化](/articles/voa/1040735.md)
-
-5-18 [天主教香港教区下一任主教称未决定会否参加六四纪念活动](/articles/voa/1040736.md)
 
