--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-1 [圆月弯刀 | 三胎放开了，农村的横幅该隆重登场了！！！](/articles/cdt/381956.md)
+
+6-1 [凤凰WEEKLY | 开放三胎了，我第一个生](/articles/cdt/381957.md)
+
 6-1 [中式没品笑话百科 |《三孩成语词典》](/articles/cdt/381960.md)
 
 5-31 [【CDTV】孙长老｜生育机器人](/articles/cdt/381963.md)
@@ -596,8 +600,4 @@
 4-25 [【旧闻重温】微博 | 我们分析了五万条种族歧视账号微博，发现了这些](/articles/cdt/383302.md)
 
 4-25 [美国之音｜“习近平家人信息泄露案” 二审宣判，牛腾宇14年刑期不变](/articles/cdt/383306.md)
-
-4-25 [【旧闻重温】Humar：在中国当一个维吾尔人是什么样的体验？](/articles/cdt/383316.md)
-
-4-25 [兽楼处 | 人生最后一刀](/articles/cdt/383319.md)
 
