--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-1 [法国专家吁银发族提早选择处理遗产方式 - 今日经济](/articles/rfi/1028831.md)
+
 6-1 [法网 费德瑞轻取伊斯托明晋2轮 – 法国国际广播电台 - RFI](/articles/rfi/1028832.md)
 
 6-1 [日本政府将为台积电半导体研发拨款190亿日元](/articles/rfi/1028833.md)
@@ -598,6 +600,4 @@
 5-27 [戴琪据报本周将首度与中国贸易官员对话](/articles/rfi/1029129.md)
 
 5-27 [加艾伯塔省要求大学审查与中国政府或中共实体合作](/articles/rfi/1029130.md)
-
-5-27 [叙利亚在政府掌控区举行总统大选， 政府强迫学生投票](/articles/rfi/1029131.md)
 
