--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,12 @@
 金融时报
 ------
 
+6-1 [裁员、收缩和整改：在线教育难过关](/articles/ft/1045542.md)
+
+6-1 [新供给冲击的经济梦魇和政策应对](/articles/ft/1045543.md)
+
+6-1 [高层政策协调是中国碳市场取得成功的关键](/articles/ft/1045544.md)
+
 5-31 [NFT降温引发去向思索](/articles/ft/1045545.md)
 
 5-31 [雀巢内部文件承认其产品大部分不健康](/articles/ft/1045546.md)
@@ -594,10 +600,4 @@
 3-26 [美国制裁缅甸军方控制的两家公司](/articles/ft/1045840.md)
 
 3-26 [英国汉学家蓝诗玲谈新译《西游记》](/articles/ft/1045841.md)
-
-3-26 [雇员睡眠时间有时也算“工作时间”——对英国最新判例的分析](/articles/ft/1045842.md)
-
-3-26 [中国对美直接投资的历史回顾与现实展望](/articles/ft/1045843.md)
-
-3-26 [印度暂停疫苗出口 影响数十国家](/articles/ft/1045844.md)
 
