--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-1 [大&amp;#22338;直美抵制受访 小威：我也碰过难熬记者会 – 法国国际广播电台 - RFI](/articles/rfi/1028820.md)
+
+6-1 [躺平主义危险吗](/articles/rfi/1028821.md)
+
 6-1 [不好记？世卫将使用希腊字母来命名变异新冠病毒株](/articles/rfi/1028822.md)
 
 6-1 [美国需要窃听欧盟领袖么 - 要闻分析](/articles/rfi/1028823.md)
@@ -596,8 +600,4 @@
 5-27 [美促WTO成员国遏止渔船强迫劳役 – 法国国际广播电台 - RFI](/articles/rfi/1029118.md)
 
 5-27 [76人季后赛首轮连胜巫师 球迷丢爆米花卫少气炸 – 法国国际广播电台 - RFI](/articles/rfi/1029119.md)
-
-5-27 [杨恒均涉谍案 澳洲外长呼吁中国公平审判 – 法国国际广播电台 - RFI](/articles/rfi/1029120.md)
-
-5-27 [拜登吁衣索比亚泰格瑞省停火 停止侵犯人权 – 法国国际广播电台 - RFI](/articles/rfi/1029121.md)
 
