--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-1 [简报：中国迎来“三孩”时代；低出生率推动关注未婚妈妈困境](/articles/nyt/1046794.md)
+
 5-31 [《一直游到海水变蓝》：作家视角里的中国](/articles/nyt/1046795.md)
 
 5-31 [永盛监狱：缅甸军方关押政治犯的“人间地狱”](/articles/nyt/1046796.md)
@@ -598,6 +600,4 @@
 3-16 [简报：中国北方再现“空气末日”；北京疫苗外交在拉美见效](/articles/nyt/1047092.md)
 
 3-15 [“古拉格的孩子”：生于大清洗，流亡70年](/articles/nyt/1047093.md)
-
-3-15 [赛百味，韩剧植入广告之王](/articles/nyt/1047094.md)
 
