--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-1 [阿德恩站队 澳新严重关切香港与新疆人权](/articles/dw/1042174.md)
+
+6-1 [波兰开审华为前高管涉间谍案](/articles/dw/1042175.md)
+
 6-1 [登顶珠峰的中国盲人](/articles/dw/1042176.md)
 
 5-31 [受疫情影响 世界杯预选赛苏州赛事易地举行](/articles/dw/1042177.md)
@@ -596,8 +600,4 @@
 5-14 [德国总统： 不会容忍对犹太人的仇恨](/articles/dw/1042472.md)
 
 5-14 [美国输油管道运营商曾支付赎金](/articles/dw/1042473.md)
-
-5-14 [35万人签名反对举办今夏东京奥运](/articles/dw/1042474.md)
-
-5-14 [撤出阿富汗 美国寻找新驻军地？](/articles/dw/1042475.md)
 
