--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-1 [特恩布尔：澳中关系冰冻期将持久 但澳必须捍卫主权 屈从只会换来被对方鄙视](/articles/voa/1040429.md)
+
 6-1 [波兰周二开始审理与华为有关的中国间谍案](/articles/voa/1040430.md)
 
 6-1 [三孩政策仍是计划生育 专家忧中国下一步会否强制生育](/articles/voa/1040431.md)
@@ -598,6 +600,4 @@
 5-19 [拜登与以色列总理通话 表示“支持停火”](/articles/voa/1040727.md)
 
 5-19 [斯里兰卡最高法院称中国支持的港口城法案违反宪法](/articles/voa/1040728.md)
-
-5-18 [消息人士称中国或将放宽生育政策，但担心影响社会稳定](/articles/voa/1040729.md)
 
