--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-1 [“蜡笔小球”侵害烈士名誉罪成 被判入狱8个月](/articles/dw/1042170.md)
+
+6-1 [德国儿童节“东”拉“西”扯](/articles/dw/1042171.md)
+
 6-1 [宁「躺平」也不生「三孩」 中国女性：别当我们是猪](/articles/dw/1042172.md)
 
 6-1 [广州疫情跨市传染  佛山也半封城](/articles/dw/1042173.md)
@@ -596,8 +600,4 @@
 5-14 [台灣本土感染數持續上升 疫苗施打一位難求](/articles/dw/1042468.md)
 
 5-14 [网瘫后，油管公司支付黑客500万赎金](/articles/dw/1042469.md)
-
-5-14 [欧洲四分之一成年人口抵制疫苗](/articles/dw/1042470.md)
-
-5-14 [德语媒体：人口问题—中国的定时炸弹](/articles/dw/1042471.md)
 
