--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-1 [新冠病毒最致命的阶段可能即将到来](/articles/nyt/1046791.md)
+
 6-1 [中国单身女性的生育困境](/articles/nyt/1046792.md)
 
 6-1 [从“独生子女”到“三孩”：中国人口政策大事记](/articles/nyt/1046793.md)
@@ -598,6 +600,4 @@
 3-16 [巴西需要疫苗，中国抓住了机会](/articles/nyt/1047089.md)
 
 3-16 [抵制北京冬奥会的正确做法](/articles/nyt/1047090.md)
-
-3-16 [十年来最严重沙尘暴席卷北京，“空气末日”记忆重现](/articles/nyt/1047091.md)
 
