--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-1 [精英说｜三孩生育政策公布！中国2600万被遗忘的女性，她们体内的“小铜环”却无人问津……](/articles/cdt/381916.md)
+
+6-1 [星球商业评论｜还记得当年怎么骂张艺谋的吗？](/articles/cdt/381918.md)
+
 6-1 [新公民计划｜六一特供：中国流动人口子女现状事实和数据2021](/articles/cdt/381927.md)
 
 6-1 [自由亚洲 | 异议人士王爱忠遭刑事拘留  跟言论和接受外媒访问有关](/articles/cdt/381952.md)
@@ -596,8 +600,4 @@
 4-26 [【CDT周报】第十四期：我支持北京房价，你们可以批他“买不起房活该”了](/articles/cdt/383286.md)
 
 4-27 [【CDTV】香港反送中抗争纪录片《不割席》全片](/articles/cdt/383288.md)
-
-4-26 [真实故事计划｜在游戏里氪金的年轻人](/articles/cdt/383289.md)
-
-4-26 [【404文库】二大爷｜付国豪的算计](/articles/cdt/383291.md)
 
