--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-1 [台湾撑起华人世界 纪念六四、勿忘六四](/articles/rfa/1045447.md)
+
 6-1 [视觉艺术家协会线上颁奖 纪念六四32周年](/articles/rfa/1045448.md)
 
 6-1 [一带一路桥头堡意大利  转向谴责中国侵犯人权](/articles/rfa/1045449.md)
@@ -598,6 +600,4 @@
 4-28 [中国卫健委禁强制接种疫苗  上海有商厦禁不打疫苗者出入](/articles/rfa/1045745.md)
 
 4-28 [北京控制的香港立法会通过《入境条例修订》  港人忧限制出入境自由](/articles/rfa/1045746.md)
-
-4-28 [拜登百日的对华政策: “对抗”为主、“合作”难成](/articles/rfa/1045747.md)
 
