--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-1 [民众轰生育政策利国不利民  埋怨政府当人民是韭菜](/articles/rfa/1045446.md)
+
 6-1 [台湾撑起华人世界 纪念六四、勿忘六四](/articles/rfa/1045447.md)
 
 6-1 [视觉艺术家协会线上颁奖 纪念六四32周年](/articles/rfa/1045448.md)
@@ -598,6 +600,4 @@
 4-28 [周正毅生日宴6主持涉收费被停职  调查组进驻查何谓“不忘初心”](/articles/rfa/1045744.md)
 
 4-28 [中国卫健委禁强制接种疫苗  上海有商厦禁不打疫苗者出入](/articles/rfa/1045745.md)
-
-4-28 [北京控制的香港立法会通过《入境条例修订》  港人忧限制出入境自由](/articles/rfa/1045746.md)
 
