--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-1 [当亚裔英雄成为美国西部文学的主角](/articles/nyt/1046790.md)
+
 6-1 [新冠病毒最致命的阶段可能即将到来](/articles/nyt/1046791.md)
 
 6-1 [中国单身女性的生育困境](/articles/nyt/1046792.md)
@@ -598,6 +600,4 @@
 3-16 [不走小路、不穿高跟鞋：为何女性牺牲自由也换不来安全？](/articles/nyt/1047088.md)
 
 3-16 [巴西需要疫苗，中国抓住了机会](/articles/nyt/1047089.md)
-
-3-16 [抵制北京冬奥会的正确做法](/articles/nyt/1047090.md)
 
