--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-1 [【旧闻重温】赵晗｜从“不许生”到“催着生”，近八百万计生人员如何转型](/articles/cdt/381915.md)
+
 6-1 [精英说｜三孩生育政策公布！中国2600万被遗忘的女性，她们体内的“小铜环”却无人问津……](/articles/cdt/381916.md)
 
 6-1 [星球商业评论｜还记得当年怎么骂张艺谋的吗？](/articles/cdt/381918.md)
@@ -598,6 +600,4 @@
 4-26 [麦杰逊 | 关于特斯拉，说点你不知道的](/articles/cdt/383285.md)
 
 4-26 [【CDT周报】第十四期：我支持北京房价，你们可以批他“买不起房活该”了](/articles/cdt/383286.md)
-
-4-27 [【CDTV】香港反送中抗争纪录片《不割席》全片](/articles/cdt/383288.md)
 
