--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-1 [海峡两岸疫苗问题上为何谈不拢？](/articles/voa/1040425.md)
+
+6-1 [六四走过尘封的32年 “小粉红”成中国青年主流力量？](/articles/voa/1040426.md)
+
 6-1 [祸不单行 被中国实施进口禁令的 JBS食品公司受网络攻击暂停部分营运](/articles/voa/1040427.md)
 
 6-1 [六四周年临近 喊“结束一党专政”口号是否违法？香港特首回应：要尊重中国宪法](/articles/voa/1040428.md)
@@ -596,8 +600,4 @@
 5-19 [接种后陆续确诊 都是中国疫苗惹的祸？](/articles/voa/1040723.md)
 
 5-19 [香港教区候任主教周守仁会见传媒 吁与年青人对话未正面回应政治议题](/articles/voa/1040724.md)
-
-5-19 [中国1季度离婚率直落70% 一纸规定扭转了多年趋势？](/articles/voa/1040725.md)
-
-5-19 [时事大家谈: 习近平要“红色江山”世代相传，为人民还是为政权？](/articles/voa/1040726.md)
 
