--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -9,6 +9,8 @@
 
 6-1 [星球商业评论｜还记得当年怎么骂张艺谋的吗？](/articles/cdt/381918.md)
 
+6-1 [【CDT月度视频】2021年5月：做自己应该做的事情不叫躺平，那叫真正的站起来](/articles/cdt/381919.md)
+
 6-1 [新公民计划｜六一特供：中国流动人口子女现状事实和数据2021](/articles/cdt/381927.md)
 
 6-1 [自由亚洲 | 异议人士王爱忠遭刑事拘留  跟言论和接受外媒访问有关](/articles/cdt/381952.md)
@@ -598,6 +600,4 @@
 4-26 [【图说天朝】赵婷获奥斯卡三项大奖：《无依之地》已遭全网封杀](/articles/cdt/383282.md)
 
 4-26 [麦杰逊 | 关于特斯拉，说点你不知道的](/articles/cdt/383285.md)
-
-4-26 [【CDT周报】第十四期：我支持北京房价，你们可以批他“买不起房活该”了](/articles/cdt/383286.md)
 
