--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-1 [香港支联会重重受压  民调显示近3成人赞成解散](/articles/rfa/1045443.md)
+
 6-1 [广州公布封锁38个社区   变异病毒入侵佛山多区被封](/articles/rfa/1045444.md)
 
 6-1 [日本真心中国假意？台湾人对疫苗赠予国两样情？](/articles/rfa/1045445.md)
@@ -598,6 +600,4 @@
 4-29 [“拒绝台湾 人人受害” 全球逾二百位议员挺台参加世卫大会](/articles/rfa/1045741.md)
 
 4-29 [两岸军事预算、兵源差距逾十倍 美国比台湾急？](/articles/rfa/1045742.md)
-
-4-28 [台积电南京扩产  大陆反对声浪高过台湾](/articles/rfa/1045743.md)
 
