--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+6-2 [欧洲各国松绑防疫措施促进经济 欧股收高 – 法国国际广播电台 - RFI](/articles/rfi/1028775.md)
+
+6-2 [东京奥运首个代表团澳洲女子垒球队抵日本](/articles/rfi/1028776.md)
+
+6-2 [世界球后巴蒂有惊无险 晋级法网第二轮 – 法国国际广播电台 - RFI](/articles/rfi/1028777.md)
+
+6-2 [解封要在咖啡厅庆祝！罗马人喜迎店内第一杯](/articles/rfi/1028778.md)
+
+6-2 [中国15个家教公司以“涉嫌欺诈”被罚款数百万美元](/articles/rfi/1028779.md)
+
 6-1 [波兰法庭6月1日开审涉及华为的中国间谍案](/articles/rfi/1028780.md)
 
 6-1 [江苏一人感染H10N3禽流感 专家称偶发跨种传播](/articles/rfi/1028781.md)
@@ -590,14 +600,4 @@
 5-28 [法国人信任警察甚于信任法官](/articles/rfi/1029073.md)
 
 5-28 [欧股走势分歧 – 法国国际广播电台 - RFI](/articles/rfi/1029074.md)
-
-5-28 [以巴冲突是否有侵犯人权的行为？联合国决定展开调查](/articles/rfi/1029075.md)
-
-5-28 [新冠系武汉实验室事故？拜登决定重启调查，但北京不答应！ - 法国世界报](/articles/rfi/1029076.md)
-
-5-28 [著名中国人文学者王康逝世一周年，《王康纪念文集》今日在美国出版](/articles/rfi/1029077.md)
-
-5-28 [西藏流亡政府完成新旧民选领袖交接仪式 - 要闻分析](/articles/rfi/1029078.md)
-
-5-28 [19岁重庆青年王靖渝27日被阿联酋释放后返回土耳其](/articles/rfi/1029079.md)
 
