--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+6-2 [世卫组织批准紧急使用中国科兴新冠疫苗](/articles/voa/1040415.md)
+
+6-2 [研究报告：中国国有企业用绿色融资规则漏洞资助燃煤电厂](/articles/voa/1040416.md)
+
+6-2 [时事大家谈: “躺平”为何在中国突然流行并引发争议？](/articles/voa/1040417.md)
+
+6-2 [香港民调：47%市民支持平反六四创18年新低 支联会指民意未逆转](/articles/voa/1040418.md)
+
+6-2 [人权报告：由于制度缺失，中国开放多胎生育给女性带来更多歧视](/articles/voa/1040419.md)
+
 6-2 [澳新总理对中国人权及南中国海问题表示严重关切，中国指责二人干涉内政](/articles/voa/1040420.md)
 
 6-1 [中国政府否认澳大利亚籍华裔作家杨恒均遭受刑讯逼供的指控](/articles/voa/1040421.md)
@@ -590,14 +600,4 @@
 5-19 [拜登期待善用《无尽边疆法》与中国竞争全球电动车领先优势](/articles/voa/1040713.md)
 
 5-19 [布林肯反对北极军事化](/articles/voa/1040714.md)
-
-5-19 [美将任命特使保护LGBTQI权益](/articles/voa/1040715.md)
-
-5-19 [美财政部再次推迟对中国军企投资禁令的生效期](/articles/voa/1040716.md)
-
-5-19 [众议院共和党领袖反对成立新委员会调查1月6日冲击国会事件](/articles/voa/1040717.md)
-
-5-19 [美国务卿: 继续密集外交努力 降低以巴冲突](/articles/voa/1040718.md)
-
-5-19 [中国拒绝与美国进行核武谈判](/articles/voa/1040719.md)
 
