--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-2 [国会机构CECC呼吁美国篮球明星停止为中国运动品牌代言](/articles/voa/1040413.md)
+
+6-2 [白俄罗斯反对派活动人士法庭听证时刺喉自伤抗议](/articles/voa/1040414.md)
+
 6-2 [世卫组织批准紧急使用中国科兴新冠疫苗](/articles/voa/1040415.md)
 
 6-2 [研究报告：中国国有企业用绿色融资规则漏洞资助燃煤电厂](/articles/voa/1040416.md)
@@ -596,8 +600,4 @@
 5-19 [中国会如何以锐实力对付台湾？](/articles/voa/1040711.md)
 
 5-19 [众议院议长佩洛西呼吁对北京冬奥会实行“外交抵制”](/articles/voa/1040712.md)
-
-5-19 [拜登期待善用《无尽边疆法》与中国竞争全球电动车领先优势](/articles/voa/1040713.md)
-
-5-19 [布林肯反对北极军事化](/articles/voa/1040714.md)
 
