--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-2 [【CDTV】“床上死鱼”一个性消极的女权主义者的生活（单口喜剧）](/articles/cdt/381888.md)
+
 6-2 [科学公园 | 高学历高智商推理作家为什么信中医，还被坑了4500？](/articles/cdt/381890.md)
 
 6-2 [恰帕斯东风Radio｜T平主义者宣言](/articles/cdt/381899.md)
@@ -598,6 +600,4 @@
 4-27 [安然居住很好 | 网信办辛苦了！一年处理违规信息超100亿条，每天约3千万条](/articles/cdt/383239.md)
 
 4-27 [二大爷BACK | 五味杂陈的小金人](/articles/cdt/383243.md)
-
-4-26 [【网络民议】当代苏联笑话：恭喜“那个女孩”的《有靠之天》获奖](/articles/cdt/383257.md)
 
