--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+6-2 [中国缺人手 印度移民来补？](/articles/rfi/1028764.md)
+
+6-2 [乔科维奇法网轻松进二轮 迎向第19个大满贯赛冠军 – 法国国际广播电台 - RFI](/articles/rfi/1028765.md)
+
+6-2 [允许了，可中国人对生第三胎没有热情了 - 法国世界报](/articles/rfi/1028766.md)
+
 6-2 [最近24小时内，英国没有人因新冠而死亡，去年7月以来的第一次](/articles/rfi/1028767.md)
 
 6-2 [英国首日无死亡 东南亚情形严重 - 要闻分析](/articles/rfi/1028768.md)
@@ -594,10 +600,4 @@
 5-28 [美防长听证会上为7150亿美元军费辩护 共和党议员认为不足](/articles/rfi/1029062.md)
 
 5-28 [特鲁多：加拿大支持美国对新冠病毒溯源努力](/articles/rfi/1029063.md)
-
-5-28 [美参议院进一步推动《美国创新和竞争法》立法](/articles/rfi/1029064.md)
-
-5-28 [白宫高官介绍拜登政府对华政策三大支柱](/articles/rfi/1029065.md)
-
-5-28 [中英外长通话 拉布表达对港疆问题持续关切](/articles/rfi/1029066.md)
 
