--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -13,6 +13,8 @@
 
 6-2 [历史在加速｜苏联的每个孩子都希望成为少先队员](/articles/cdt/381900.md)
 
+6-2 [【CDT推荐】本周推荐媒体](/articles/cdt/381902.md)
+
 6-1 [【旧闻重温】赵晗｜从“不许生”到“催着生”，近八百万计生人员如何转型](/articles/cdt/381915.md)
 
 6-1 [精英说｜三孩生育政策公布！中国2600万被遗忘的女性，她们体内的“小铜环”却无人问津……](/articles/cdt/381916.md)
@@ -598,6 +600,4 @@
 4-27 [【CDTV】赵婷校友在上海酒吧直播奥斯卡颁奖典礼 VPN线路被干扰](/articles/cdt/383235.md)
 
 4-27 [自由亚洲 | 孙大午等高管被全数批捕 外加新罪名](/articles/cdt/383237.md)
-
-4-27 [安然居住很好 | 网信办辛苦了！一年处理违规信息超100亿条，每天约3千万条](/articles/cdt/383239.md)
 
