--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+6-2 [市场观望 日股开低 – 法国国际广播电台 - RFI](/articles/rfi/1028761.md)
+
+6-2 [习近平不满大外宣系统没有提高中国话语说服力](/articles/rfi/1028762.md)
+
+6-2 [雅虎民调：美国面临的最严问题已经不是新冠疫情而是暴力犯罪](/articles/rfi/1028763.md)
+
 6-2 [中国缺人手 印度移民来补？](/articles/rfi/1028764.md)
 
 6-2 [乔科维奇法网轻松进二轮 迎向第19个大满贯赛冠军 – 法国国际广播电台 - RFI](/articles/rfi/1028765.md)
@@ -594,10 +600,4 @@
 5-28 [字母哥缴双十 公鹿季后赛对热火听牌 – 法国国际广播电台 - RFI](/articles/rfi/1029059.md)
 
 5-28 [日本紧急事态宣言 将统一延长实施至6月20日 – 法国国际广播电台 - RFI](/articles/rfi/1029060.md)
-
-5-28 [欧盟筹划对白俄经济制裁 德外长：若不放人将迎来漫长制裁](/articles/rfi/1029061.md)
-
-5-28 [美防长听证会上为7150亿美元军费辩护 共和党议员认为不足](/articles/rfi/1029062.md)
-
-5-28 [特鲁多：加拿大支持美国对新冠病毒溯源努力](/articles/rfi/1029063.md)
 
