--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-2 [第一财经YiMagazine｜15年来，谁在用豆瓣？](/articles/cdt/381881.md)
+
 6-2 [立场新闻 |【支联会的战役1】一个爱国组织的生与死：和理非、国际线、各区开花（1989 版）](/articles/cdt/381887.md)
 
 6-2 [【CDTV】“床上死鱼”一个性消极的女权主义者的生活（单口喜剧）](/articles/cdt/381888.md)
@@ -14,6 +16,8 @@
 6-2 [历史在加速｜苏联的每个孩子都希望成为少先队员](/articles/cdt/381900.md)
 
 6-2 [【CDT推荐】本周推荐媒体](/articles/cdt/381902.md)
+
+6-2 [【CDT网语】2021年5月：一个社会应该给善良人以勇气，弱势者以悲悯](/articles/cdt/381904.md)
 
 6-1 [【旧闻重温】赵晗｜从“不许生”到“催着生”，近八百万计生人员如何转型](/articles/cdt/381915.md)
 
@@ -596,8 +600,4 @@
 4-27 [玖奌杂货铺｜开除清华大学跳舞的那几名女生，你脑子进水了吧？](/articles/cdt/383227.md)
 
 4-27 [【图说天朝】来看几张某APP敏感词后台的截图吧](/articles/cdt/383234.md)
-
-4-27 [【CDTV】赵婷校友在上海酒吧直播奥斯卡颁奖典礼 VPN线路被干扰](/articles/cdt/383235.md)
-
-4-27 [自由亚洲 | 孙大午等高管被全数批捕 外加新罪名](/articles/cdt/383237.md)
 
