--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-2 [大步迈向独裁 香港当局以无牌经营迫使六四纪念馆关闭](/articles/voa/1040406.md)
+
+6-2 [追查新冠源头 美国情报界要如何调查？](/articles/voa/1040407.md)
+
+6-2 [美国财长耶伦与中国副总理刘鹤通话 美方不提全面经济对话机制](/articles/voa/1040408.md)
+
 6-2 [一百年后，这座美国城市铭记这场种族屠杀](/articles/voa/1040409.md)
 
 6-2 [“爱国主义武器化是暴政标志” 美两党议员忧香港民主开倒车](/articles/voa/1040410.md)
@@ -594,10 +600,4 @@
 5-19 [拜登称不能让中国的电动汽车制造业超越美国 中国：别动不动拿中国说事](/articles/voa/1040704.md)
 
 5-19 [两党议员吁抵制北京冬奥 史密斯：美企们，不要赞助“种族灭绝奥运”](/articles/voa/1040705.md)
-
-5-19 [邀以巴和谈 批美不给力 学者：中国想做中东调停人，难！](/articles/voa/1040706.md)
-
-5-19 [台海紧张加剧之际 美国军舰再次公开穿越台湾海峡](/articles/voa/1040707.md)
-
-5-19 [对抗中俄北极野心 布林肯开启北欧之行](/articles/voa/1040708.md)
 
