--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+6-2 [拜登政府基础设施建设计划面临的五大矛盾](/articles/ft/1045531.md)
+
 6-2 [对话科特勒兄弟，从4P到4C再到5A，接下来全球营销做什么？](/articles/ft/1045532.md)
 
 6-2 [欧洲股市以强劲上涨迎来6月](/articles/ft/1045533.md)
@@ -598,6 +600,4 @@
 3-30 [2021年的增长来自哪里](/articles/ft/1045829.md)
 
 3-30 [“长赐号”终于脱浅 苏伊士运河恢复通航在即](/articles/ft/1045830.md)
-
-3-29 [“长赐”号部分脱浅](/articles/ft/1045831.md)
 
