--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-2 [美副国务卿会见洪森 “严重关注”中国在柬设立军事设施**](/articles/voa/1040405.md)
+
 6-2 [大步迈向独裁 香港当局以无牌经营迫使六四纪念馆关闭](/articles/voa/1040406.md)
 
 6-2 [追查新冠源头 美国情报界要如何调查？](/articles/voa/1040407.md)
@@ -598,6 +600,4 @@
 5-19 [美俄外长会谈 “考验两国能否建立更稳固的双边关系](/articles/voa/1040703.md)
 
 5-19 [拜登称不能让中国的电动汽车制造业超越美国 中国：别动不动拿中国说事](/articles/voa/1040704.md)
-
-5-19 [两党议员吁抵制北京冬奥 史密斯：美企们，不要赞助“种族灭绝奥运”](/articles/voa/1040705.md)
 
