--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-2 [鼓励生、 限制生、 催着生！ 中国生育政策的变迁](/articles/dw/1042151.md)
+
+6-2 [力求不再受制于人！华为发布鸿蒙新系统](/articles/dw/1042152.md)
+
 6-2 [在白俄罗斯遭拘押德国之声通讯员获释](/articles/dw/1042153.md)
 
 6-2 [官方突袭调查 香港六四纪念馆暂关闭](/articles/dw/1042154.md)
@@ -596,8 +600,4 @@
 5-16 [德国军队撤离阿富汗，谁管他们的当地雇员？](/articles/dw/1042449.md)
 
 5-16 [建筑需求大增　中国成德国木材最大市场](/articles/dw/1042450.md)
-
-5-16 [滞留意大利海岛：谁来接纳移民？](/articles/dw/1042451.md)
-
-5-16 [专访林浊水：台湾的民主并不成熟](/articles/dw/1042452.md)
 
