--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+6-2 [白夏：唐吉田去日本照料病重的女儿安能威胁国家安全](/articles/rfi/1028732.md)
+
+6-2 [Amazon求快仓库员工常受伤 将变更生产力监督机制 – 法国国际广播电台 - RFI](/articles/rfi/1028733.md)
+
+6-2 [欧洲之树与法国之树 ——欧洲文化遗产的一大组成 - 文化遗产](/articles/rfi/1028734.md)
+
+6-2 [经济复苏派和通膨疑虑派交战 亚股涨跌互见 – 法国国际广播电台 - RFI](/articles/rfi/1028735.md)
+
+6-2 [拜登出席塔尔萨种族屠杀百年纪念活动：“我来这里是为了打破沉默” - 要闻解说](/articles/rfi/1028736.md)
+
 6-2 [中国将宣传触角伸向全球 - 法国报纸摘要](/articles/rfi/1028737.md)
 
 6-2 [如果东京奥运会取消 日本要赔偿多少钱？ - 东京专栏](/articles/rfi/1028738.md)
@@ -590,14 +600,4 @@
 5-28 [黎智英等人承认非法集结 判囚14到18个月 – 法国国际广播电台 - RFI](/articles/rfi/1029030.md)
 
 5-28 [日欧首脑联合声明提及台湾海峡与东海安全 北京抗议](/articles/rfi/1029031.md)
-
-5-28 [中国多建大学生思想宣传教育红色自媒体北大清华共青团列榜首 中小学也列加强思想宣传](/articles/rfi/1029032.md)
-
-5-28 [台湾官方：BNT要求将「我国」改为「台湾」疫苗采购终无下文](/articles/rfi/1029033.md)
-
-5-28 [跟随华尔街涨势 欧洲股市开盘走扬 – 法国国际广播电台 - RFI](/articles/rfi/1029034.md)
-
-5-28 [足球强国计画 中国4年内建16到18重点城市 – 法国国际广播电台 - RFI](/articles/rfi/1029035.md)
-
-5-28 [港股近乎持平作收 市场对经济复苏前景仍乐观 – 法国国际广播电台 - RFI](/articles/rfi/1029036.md)
 
